# tp_doc_ai_agent_revised

./: .gitignore  .graphifyignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  e -i 0dc853efcada1f2b418279bf2b74ac7394245d9b^qclear  generate_diagrams.py  pytest.ini
.claude/: CLAUDE.md  settings.json  settings.local.json
.codex/: AGENTS.md
backend/: .env.example  Dockerfile  manage.py  requirements-test.txt  requirements.txt
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
graphify-out/: GRAPH_REPORT.md  cost.json  manifest.json
tests/: conftest.py  test_agent_tools.py  test_config_api.py  test_export_api.py  test_models.py  test_orchestrator_skip_nodes.py  (+3 more)
tp_app/: .gitignore  README.md  TP_Local_File_TEMPLATE.docx  TP_Local_File_TEMPLATE.docx.bak  TP_Local_File_TEMPLATE.docx.tmp  TP_Local_File_TEMPLATE_hdrfix.docx  TP_Local_File_TEMPLATE_hdrfix_backup.docx  agent_config.py  app.py  apply_jinja_template.py  fix_header_border.py  inspect_a4.py  inspect_headers.py  pyproject.toml  requirements.txt  search_pipeline.py  test_pl_export.py
tp_app/.claude/: CLAUDE.md
tp_app/.claude/agents/: codebase-guardian.md  ui-ux-designer.md
tp_app/agents/: analysis_subagent.py  business_subagent.py  extraction_agent.py  llm_factory.py  nodes.py  orchestrator.py  research_subagent.py  summary_subagent.py  tools.py  transaction_subagent.py
tp_app/export/: docx_export.py  docx_template_export.py
tp_app/templates/: sections.py
tp_app/utils/: document_processor.py  dummy_data.py
(+57 files in other folders)
